Fixing a bug that would cause overlay elements to display outside of canvas area on Safari

--- a/client/style/styles.css
+++ b/client/style/styles.css
@@ -197,7 +197,7 @@ canvas {
         }
     }
     > .attack-bar-menu {
-        position: absolute;
+        position: fixed;
         bottom: calc(var(--unit) / 2);
         left: 50%;
         transform: translateX(-50%);
